[package]
authors = ["Romeo Ahmed <ahmedorqwn@gmail.com>"]
name = "lsb_hide"
version = "1.0.3"
edition = "2024"
description = "LSB Steganography Tool for BMP Images"
license = "MIT"
readme = "README.md"
repository = "https://github.com/romeoahmed/lsb_hide"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.52", features = ["derive"] }
colored = "3.0.0"
