[package]
authors = ["Romeo Ahmed <ahmedorqwn@gmail.com>"]
name = "lsb_hide"
version = "2.0.1"
edition = "2024"
description = "LSB Steganography Tool for lossless images like PNG and BMP"
license = "MIT"
readme = "README.md"
repository = "https://github.com/romeoahmed/lsb_hide"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
image = { version = "0.25.9", default-features = false, features = ["bmp", "png", "tiff", "webp", "qoi"] }
